infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: aosborne17/client:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the client pod
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      targetPort: 3000
      port: 3000
