infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: aosborne17/comments:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the comments pod
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      targetPort: 4001
      port: 4001
