infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: aosborne17/event-bus:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the event-bus pod
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      targetPort: 4005
      port: 4005
