infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: aosborne17/posts:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the posts pod
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      targetPort: 4000
      port: 4000
