infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: aosborne17/query:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the query pod
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      targetPort: 4002
      port: 4002
